--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -10,34 +10,30 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- <form class="d-flex mx-auto" role="search">
-        <input class="form-control form-search" type="search" placeholder="Search" aria-label="Search">
-        <button class="search-button" type="submit"><img class="search-icon" src="/assets/icons/search.png" alt=""></button>
-      </form> -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin">Dashboard</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin"><span class="un">Dashboard</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin/categories">Categories</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/categories"><span class="un">Categories</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin/products">Products</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/products"><span class="un">Products</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link nav-item" href="/admin/users">Users</a>
+          <a class="nav-link nav-item" href="/admin/users"><span class="un">Users</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin/orders">Orders</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/orders"><span class="un">Orders</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin/coupons">Coupons</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/coupons"><span class="un">Coupons</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="/admin/banner">Banners</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/banner"><span class="un">Banners</span></a>
         </li>
         <li class="nav-item d-flex align-items-center ps-4">
-          <button type="button" class="logout-button" data-bs-toggle="modal" data-bs-target="#modal">
+          <button type="button" class="logout-button" data-bs-toggle="modal" data-bs-target="#logout-modal">
             <img class="navbar-icon" src="/assets/icons/logout.png" alt="">
             Logout
           </button>
@@ -46,7 +42,7 @@
     </div>
   </div>
 </nav>
-<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+<div class="modal fade" id="logout-modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
       <div class="modal-header">
