--- a/views/partials/guest-navbar.ejs
+++ b/views/partials/guest-navbar.ejs
@@ -16,10 +16,10 @@
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active nav-item" aria-current="page" href="/login">Sign In</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/login"><span class="un">Sign In</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-item" href="/register">Sign Up</a>
+          <a class="nav-link nav-item" href="/register"><span class="un">Sign Up</span></a>
         </li>
       </ul>
     </div>
