--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -1,4 +1,4 @@
- defer<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/admin/admin-head-datatable') %> 
 <body class="mt-5">
@@ -6,7 +6,7 @@
   <section class="container pt-5">
     <div class="row">
       <div>
-        <a href="admin/products/new" class="btn btn-success mb-3">Add Products</a>
+        <a href="/admin/products/new" class="btn btn-success mb-3">Add Products</a>
       </div>
       <div class="col-12 table-overflow">
         <table id="datatable" class="table table-striped">
