--- a/views/admin/banners/banners.ejs
+++ b/views/admin/banners/banners.ejs
@@ -32,7 +32,24 @@
                   <% }else{ %>
                     <button class="btn btn-warning" id="set-current" onclick="setCurrent(this.id, '<%= banner._id %>')">Set current</button>
                 <% } %>  
-                <button class="btn btn-danger" id="delete-bannner-button" onclick="deleteBanner(this.id, '<%= banner._id %>')">Delete</button>
+                <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#bannerModal<%= count %>">Delete</button>
+                <div class="modal fade" id="bannerModal<%= count %>" tabindex="-1" aria-labelledby="bannerModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="bannerModalLabel">Delete Banner</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        Are you sure?
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn btn-danger" id="delete-bannner-button<%= count %>" onclick="deleteBanner(this.id, '<%= banner._id %>')">Delete</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </td>
           </tr>
@@ -41,7 +58,7 @@
         </tbody>
       </table>
     </div>
-    <div class="col-12 mt-5">
+    <div class="col-12 my-5">
       <p class="text-danger"><%= message %></p>
       <form action="/admin/banner" method="POST" enctype="multipart/form-data">
         <div class="mb-3">
