--- a/views/users/dashboard.ejs
+++ b/views/users/dashboard.ejs
@@ -31,14 +31,16 @@
       </div>
       <div class="col-md-4 my-4 order-card">
         <a href="/orders" class="text-decoration-none">
-          <div class="card h-100 d-flex align-items-center justify-content-center">
+          <div class="card h-100 d-flex flex-row align-items-center justify-content-center">
+            <img class="dashboard-icon me-2 mb-1" src="/assets/icons/box.png" alt="">
             <h3>Orders</h3>
           </div>
         </a>
       </div>
       <div class="col-md-4 my-4 order-card">
         <a href="/wishlist" class="text-decoration-none">
-          <div class="card h-100 d-flex align-items-center justify-content-center">
+          <div class="card h-100 d-flex flex-row align-items-center justify-content-center">
+            <img class="dashboard-icon me-2 mb-1" src="/assets/icons/heart.png" alt="">
             <h3>Wishlist</h3>
           </div>
         </a>
@@ -48,7 +50,7 @@
     <% if(userDetails.shippingAddress.length>0){ %> 
       <div class="row">
       <% userDetails.shippingAddress.forEach(item => { %> 
-        <div class="col-md-6">
+        <div class="col-md-6 mb-3">
           <div class="card d-flex flex-row justify-content-between p-5 position-relative">
             <p class="col-6">Address <%= ++count %>:</p>
             <div class="text-end col-6">
