--- a/views/users/reset-password.ejs
+++ b/views/users/reset-password.ejs
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head') %> 
+<%- include('../partials/head') %> 
 <body class="pt-5">
-  <%- include('./partials/user-login-navbar') %> 
+  <%- include('../partials/user-login-navbar') %> 
   <div class="container h-100">
     <div class="row h-100 d-flex justify-content-center align-items-center">
       <div class="col-md-5">
         <div class="login-card p-5">
           <div class="text-center text-white">
-            <h1 class="sign-in">Sign In</h5>
+            <h1 class="sign-in">Enter OTP</h5>
           </div>
           <p class="text-danger"><%= message %> </p>
-          <form action="/login" method="POST">
+          <form action="/password/reset/<%= user._id %>" method="POST">
             <div class="mt-3 mb-3">
-              <label class="col-12 login-label" for="email">Email Address</label>
-              <input class="col-12 login-input" type="text" name="email" id="email">
-            </div>
-            <div class="my-4 mb-0">
               <label class="col-12 login-label" for="password">Password</label>
               <input class="col-12 login-input" type="password" name="password" id="password">
             </div>
-            <div class="my-3">
-              <a href="/forgot-password">Forgot Password</a>
+            <div class="mt-3 mb-3">
+              <label class="col-12 login-label" for="confirm-password">Confirm Password</label>
+              <input class="col-12 login-input" type="password" name="confirm-password" id="confirm-password">
             </div>
             <div class="d-flex justify-content-center m-4">
-              <button class="main-button" type="submit">Sign In</button>
+              <button class="main-button" type="submit">Submit</button>
             </div>
             <div class="mt-4 mb-2 text-center pt-3">
-              <a href="/register">Don't have an account? Sign Up</a>
+              <a href="/login">Back to login</a>
             </div>
           </form>
         </div>
