--- a/public/style.css
+++ b/public/style.css
@@ -44,7 +44,7 @@ body{
   transition: background-color 0.3s;
 }
 .main-button{
-  border: solid 2px var(--color-secondary);
+  border: solid 3px var(--color-secondary);
   border-radius: 10em;
   background-color: var(--color-secondary);
   color: white;
@@ -392,7 +392,7 @@ footer div div div p:first-child{
   padding-bottom:2px;
   background-image: linear-gradient(rgb(0, 0, 0) 0 0);
   background-position: 0 100%;
-  background-size: 0% 1px;
+  background-size: 0% 2px;
   background-repeat: no-repeat;
   transition: background-size 0.3s, background-position 0s 0.3s;
 }
@@ -402,4 +402,37 @@ footer div div div p:first-child{
 }
 .table-image-orders{
   max-width: 7rem;
+}
+.side-bar{
+  position: fixed;
+  top: 5rem;
+  left: 0;
+  bottom: 0;
+}
+.orders{
+  margin-left: 30rem;
+  margin-right: 2rem;
+}
+
+@media(max-width: 770px){
+  .orders{
+    margin-left: 15rem;
+    margin-right: 1rem;
+  }
+}
+@media(max-width: 500px){
+  .side-bar{
+    position: static;
+  }
+  .orders{
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+.address-card{
+  min-height: 20rem;
+}
+.order-text{
+  text-overflow: ellipsis;
 }
