--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -3,60 +3,71 @@
 <%- include('../partials/head') %> 
 <body class="pt-5">
 <%- include('../partials/user-navbar') %> 
-<section class="container min-vh-100 pt-5">
-  <div class="row">
-    <% orders.forEach(order => { %> 
-      <% order.items.forEach(item => { %> 
-    <div class="col-12 my-2">
-      <a href="/orders/<%= order._id %> " class="text-decoration-none">
-        <div class="card row d-flex flex-row p-3">
-          <div class="col-lg-3 d-flex justify-content-center">
-            <img class="checkout-images" src="/<%= item.image %> " alt="">
-          </div>
-          <div class="col-lg-3">
-            <div>
-              <p class="fw-bold"><%= item.productName %></p>
-            </div>
-            <div>
-              <p><%= item.color %></p>
-            </div>
-            <div>
-              <p class="text-muted fw-light">Order id: <%= order._id %> </p>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div>
-              <p class="fw-bold">₹<%= Math.round(item.price * 1.18) %></p>
-            </div>
-            <div>
-              <p class="">Quantity: <%= item.quantity %> </p>
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <% if(item.isCancelled){ %>
-              <div>
-                <p class="text-danger"><strong>Order Status: </strong>Cancelled</p>
-              </div>
-            <% }else if(item.orderStatus == 'Delivered'){ %> 
-              <div>
-                <p class="text-success"><strong>Order Status: </strong>Delivered</p>
-              </div>
-            <% }else{ %>
-              <div>
-                <p><strong>Order Status: </strong><%= item.orderStatus %> </p>
-              </div>
-              <div>
+<div class="orders">
+  <section class="container min-vh-100 pt-5">
+    <div class="row">
+      <div class="col-sm-4 side-bar">
+        <div class="card p-3 m-4">
+          <a class="text-decoration-none" href="/dashboard">Dashboard</a>
+        </div>
+        <div class="card p-3 m-4 bg-dark">
+          <a class="text-decoration-none text-white" href="/orders">Orders</a>
+        </div>
+        <div class="card p-3 m-4">
+          <a class="text-decoration-none" href="/dashboard/address/manage">Manage Address</a>
+        </div>
+      </div>
+      <% orders.forEach(order => { %> 
+        <div class="col-12 my-2">
+          <a href="/orders/<%= order._id %> " class="text-decoration-none">
+            <div class="card row d-flex flex-row p-3">
+              <div class="d-flex justify-content-between">
+                <p class="text-muted fw-light">Order id: <%= order._id %> </p>
                 <p>Payment Status: <%= order.paymentMethod == 'COD'? order.paymentMethod : (order.paymentVerified? 'Completed' : 'Pending') %>  </p>
               </div>
-            <% } %>   
+              <% order.items.forEach((item, index, array) => { %> 
+              <div class="col-12 row">
+  
+                <div class="col-lg-6">
+                <div>
+                  <p class="fw-bold order-text"><%= item.productName %></p>
+                </div>
+                <div>
+                  <p><%= item.color %></p>
+                </div>
+              </div>
+              <div class="col-lg-2">
+                <div>
+                  <p class="">Quantity: <%= item.quantity %> </p>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <% if(item.isCancelled){ %>
+                  <div>
+                    <p class="text-danger"><strong>Order Status: </strong>Cancelled</p>
+                  </div>
+                <% }else if(item.orderStatus == 'Delivered'){ %> 
+                  <div>
+                    <p class="text-success"><strong>Order Status: </strong>Delivered</p>
+                  </div>
+                <% }else{ %>
+                  <div>
+                    <p><strong>Order Status: </strong><%= item.orderStatus %> </p>
+                  </div>
+                <% } %>   
+              </div>
+              </div>
+              <% if(index < array.length-1) {%> 
+              <hr> 
+              <% } %> 
+            <% }) %>
           </div>
-        </div>
-      </a>
+        </a>
+      </div>
+      <% }) %> 
     </div>
-    <% }) %> 
-    <% }) %> 
-  </div>
-</section>
+  </section>
+</div>
 <%- include('../partials/footer') %> 
 <script defer src="/script/userScript.js"></script>
 </body>
